# street-view-ml

./: .gitignore  README.md  pyproject.toml
data/: placeholder.txt
src/: data_loader.py  dataset.py  main.py  network.py  utils.py
