[tool.poetry]
name = "street-view-ml"
version = "0.1.0"
description = "ML based approach to guessing worldwide location from streetview images."
authors = ["Peter4137 <peter.robinson4137@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
torch = "^2.4.0"
torchvision = "^0.19.0"
pandas = "^2.2.2"
matplotlib = "^3.9.2"
numpy = "<2.0"


[tool.poetry.group.dev.dependencies]
ruff = "^0.6.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
